[package]
name = "pecker"
version = "0.1.0"
authors = ["c10t <c10t@fa.ke>"]
edition = "2018"

[dependencies]
# to avoid "no method named `json` found for type `reqwest::Response` in the current scope"
reqwest = { version = "*", features = ["json"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
tokio = { version = "0.2", features = ["macros"] }
